# upt-work

./: README.md
egioc-lab-game/: README.md  start_game_server.bat  start_game_server.sh
egioc-lab-game/Assets/Scenes/: Game.unity  Menu.unity
egioc-lab-game/Assets/code/: CandyScript.cs  CandySpawner.cs  MainMenuController.cs  Manager.cs  PlayerController.cs
egioc-lab-game/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
egioc-lab-game/webgl/: main_server.py
iep-lab/: .gitignore  README.md
iep-lab/h1/: README.md
iep-lab/h2/: README.md
iep-lab/h2/lucrarea5/: CMakeLists.txt
iep-lab/h2/lucrarea5/src/: engine.hpp  frunk_car.cpp  frunk_car.hpp  main.cpp  regular_car.cpp  regular_car.hpp
iep-lab/h3/: README.md
oc-lab-line-follower/: Line follower robot.pptx
oc-lab-line-follower/arduino/: LineFollowerRobot.ino
pass-lab-reverse-engineering/: .gitignore  README.md
passc-blackboard-pattern/: README.md
passc-blackboard-pattern/src/: Client.java
passc-event-bus/: README.md  pom.xml
passc-lab-pipes-and-filters/: .gitignore  README.md
passc-lab-pipes-and-filters/src/: Client.java
pd-lab/lab2/: MemStatus.cpp  MemStatus_1.cpp  MemStatus_2.cpp  info.md
pd-lab/lab3/: DriverCtrl.cpp  info.md
se-lab-moodzart/: README.md
se-lab-moodzart/docs/: proj.md
se-lab-moodzart/rel/: facts.json  main.py  rules.json
sma-lab1/: .gitignore  README.md
sma-lab1/lab1/: settings.gradle
ssc-lab/lab2/: README.md
ssc-lab/lab3/: README.md
ssc-lab/lab4/: README.md
ssc-lab/lab5/: README.md
ssc-lab/lab6/: README.md
(+156 files in other folders)
